# tpmp-rvn-lab5-flowers_team

./: .gitignore  CMakeLists.txt  README.md  db_migrations
.github/workflows/: build.yml
Pages/: dbScheme.md  diagramsUML.md  fuctionalRequirement.md  projectPresentation.md
db/: flower.sql
include/: AccessCommand.hpp  Authorization.hpp  Command.hpp  CommandManager.hpp  Composition.hpp  CompositionMaxDemandAnalyzer.hpp  CompositionProfitAnalyzer.hpp  CompositionSelector.hpp  Flower.hpp  FlowerCostUpdate.hpp  FlowerVarietyPeriodAnalyzer.hpp  InfoAboutOrder.hpp  NewOrderCostCalculator.hpp  Order.hpp  OrderPeriodCountAnalyzer.hpp  OrderPeriodProfitAnalyzer.hpp  Registration.hpp  User.hpp  Validator.hpp
src/: AccessCommand.cpp  Authorization.cpp  Command.cpp  CommandManager.cpp  Composition.cpp  CompositionMaxDemandAnalyzer.cpp  CompositionProfitAnalyzer.cpp  CompositionSelector.cpp  Flower.cpp  FlowerCostUpdate.cpp  FlowerVarietyPeriodAnalyzer.cpp  InfoAboutOrder.cpp  NewOrderCostCalculator.cpp  Order.cpp  OrderPeriodCountAnalyzer.cpp  OrderPeriodProfitAnalyzer.cpp  Registration.cpp  User.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp  tests_coverage_script
